# classifer.api

./: .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml
classifier_api/: config.py  errors.py  main.py  model_selection.py  router.py
classifier_api/models/: text_model.pkl
classifier_api/models/image_model/: saved_model.pb
classifier_api/models/image_model/variables/: variables.index
tests/: test_model_selection.py
