[tool.poetry]
name = "classifier.api"
version = "0.0.1"
description = "API to return predctions from image or text classifier"
authors = ["Vanita K"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
scikit-learn = "0.24.1"
pandas = "^1.3.1"
numpy = "~1.19.0"
tensorflow = "^2.5.0"
Pillow = "^8.3.1"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.9.6"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
